# my-ai-spreadsheet

./: .gitignore  Cargo.toml  README.md  docker-compose.build.yml  docker-compose.ecr.yml  docker-compose.yml  package.json
docs/: how_quadratic_works.md
quadratic-client/: index.html  package.json  tsconfig.generic.json  vite.config.js
quadratic-client/public/: empty.grid
quadratic-client/src/: env-vars.ts  index.css
quadratic-client/src/app/actions/: fileActionsSpec.ts  helpActionsSpec.ts
quadratic-client/src/app/atoms/: sourceViewerAtom.ts
quadratic-client/src/app/events/: events.ts
quadratic-client/src/app/gridGL/: QuadraticGrid.tsx
quadratic-client/src/app/provenance/: ProvenanceIndicators.tsx  index.ts  provenanceStore.ts  provenanceTypes.ts  useProvenanceSync.ts
quadratic-client/src/app/quadratic-core/: quadratic_core.d.ts  quadratic_core.js
quadratic-client/src/app/ui/: QuadraticSidebar.tsx  QuadraticUI.tsx
quadratic-client/src/auth/: auth.ts  local.ts
quadratic-client/src/components/: CancellationDialog.tsx
quadratic-client/src/dashboard/components/: DashboardHeader.tsx  DashboardSidebar.tsx  EducationDialog.tsx  FileLimitBanner.tsx  FilesListItems.tsx  (+4 more)
quadratic-client/src/mock-api/: mockApiMiddleware.js  roleOrchestrator.js  statementMapper.js
quadratic-client/src/routes/: _dashboard.tsx  file.$uuid.tsx  teams.$teamUuid.files.create.ai.tsx  teams.$teamUuid.settings.tsx  templates.tsx
quadratic-client/src/types/: cron-parser.d.ts
quadratic-core/: Cargo.toml
quadratic-core/.cargo/: config.toml
quadratic-shared/: package.json
(+41 files in other folders)
